matching-engine/templates/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apro-matching-engine
  namespace: kong
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: apro-matching-engine
