matching-engine/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apro-matching-engine
  namespace: kong
  annotations:
    configuration.konghq.com: do-not-preserve-host
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apro-matching-engine
            port: 
              number: 80
